tests/pick/05-no-fields.stderr
error: Missing field `fields`
 --> tests/pick/05-no-fields.rs:4:8
  |
4 | #[pick(arg(ident = Meta, derive(Debug, PartialEq)))]
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
